# OwlDelivery

./: .env.sample  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  build_docker.sh  docker-compose.yml  entrypoint.py  pyproject.toml  requirements.txt  run_sample_docker.sh
.claude/rules/: django.md  docker.md  general.md  nginx.md
.claude/skills/docker-rebuild/: SKILL.md
bootstrap/: install.sh  start.py
server/config/: nginx.conf
server/config/http.d/: Django_server.conf
server/data/static/css/: base.css  components.css  content.css  folding_box.css  forms.css  layout.css  main.css  pages.css  reset.css  tables.css  tokens.css  utilities.css
server/data/static/js/: accordion.js  folding_box.js  mobile-nav.js
server/data/static/scripts/: api.py
server/data/templates/: base.html  index.html
server/data/templates/delivery/: branches.html  news.html  news_detail.html  revision_detail.html  revisions.html  users.html
server/data/templates/errors/: 400.html  403.html  404.html  500.html
server/data/templates/includes/: form_field.html
server/data/templates/registration/: base_registration.html  login.html  password_change_done.html  password_change_form.html  (+9 more)
server/scripts/: manage.py
server/scripts/connector/: apps.py  forms.py  settings.py  urls.py  views.py
server/scripts/delivery/: Revision_utils.py  admin.py  apps.py  db_locking.py  forms.py  models.py  perms_utils.py  revision_utils.py  urls.py  views.py  views_admin.py  views_error.py  views_user.py
server/scripts/scripts/: asgi.py  settings.py  urls.py  wsgi.py
(+8 files in other folders)
